// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and darwin 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "4.1.1",
  "versionInfoStart": 233472,
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "4.1.1",
  "versionInfoStart": 233472,
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "4.1.1",
  "versionInfoStart": 233472,
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and darwin 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s132_3.1.0.hex",
  "sdBleApiVersion": 3,
  "version": "4.1.1",
  "versionInfoStart": 327680,
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s132_3.1.0.hex",
  "sdBleApiVersion": 3,
  "version": "4.1.1",
  "versionInfoStart": 327680,
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_1m_with_s132_3.1.0.hex",
  "sdBleApiVersion": 3,
  "version": "4.1.1",
  "versionInfoStart": 327680,
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for darwin 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_usb_for_s132_3.1.0.hex",
    "softdevice": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 4.1.1+May-07-2019-15-12-18",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for linux 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_usb_for_s132_3.1.0.hex",
    "softdevice": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 4.1.1+May-07-2019-15-12-18",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for win32 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/connectivity_4.1.1_usb_for_s132_3.1.0.hex",
    "softdevice": "<PROJECT_ROOT>/build/Release/pc-ble-driver/hex/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 4.1.1+May-07-2019-15-12-18",
}
`;
